AM_CFLAGS = -Wall -Werror -g
gnutmsgsincdir = $(includedir)/gnutmsgs
lib_LTLIBRARIES = libgnutmsgs.la
libgnutmsgs_la_SOURCES = gnut_msgs.c gnut_common.c gnut_ping_msg.c gnut_pong_msg.c gnut_query_msg.c gnut_query_hit_msg.c gnut_bye_msg.c
gnutmsgsinc_HEADERS = gnut_msgs.h gnut_common.h gnut_ping_msg.h gnut_pong_msg.h gnut_query_msg.h gnut_query_hit_msg.h gnut_bye_msg.h
